[package]
name = "s5h2net"
version = "0.1.0"
edition = "2021"

[dependencies]
h2 = { version = "0.4" }
http = { version = "1" }
bytes = { version = "1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
native-tls = { version = "0.2.12", features = ["alpn", "vendored"] }
tokio-native-tls = { version = "0.3" }
ip_network_table-deps-treebitmap = { version = "0.5.0" }
